@startuml

class Cancion{
    - titulo: String
    - album: Album
    - cantLikes: Integer
    - cantDislikes: Integer
    - cantReproducciones: Integer
    - anioLanzamiento: Integer
    - ultReproduccion: LocalDateTime
    - popularidad: Popularidad
    + reproducir(): String
    + darLike(): Integer
    + darDislike(): Integer
}

class Album{
    - nombre: String
    - artista: Artista
    - anioLanzamiento: Integer
}

class Artista{
    - String nombre
}

class Icono{
    + texto(): String
}

abstract class Popularidad{
    +obtenerDetalle(Cancion cancion): String
    +cambiarPopularidad(Cancion cancion, Popularidad popularidad): void
    #abstract obtenerLeyenda(Cancion cancion): String
    #abstract obtenerIcono(): String
    #abstract reproducir(Cancion cancion): void
}

class Normal{
    -icono: String
    +obtenerLeyenda(Cancion cancion): String
    +cambiarPopularidad(Cancion cancion, Popularidad popularidad): void
    +actualizarPopularidad(Cancion cancion): void
}

class Tendencia{
    -icono: String
    +obtenerLeyenda(Cancion cancion): String
    +cambiarPopularidad(Cancion cancion, Popularidad popularidad): void
    +actualizarPopularidad(Cancion cancion): void
}

class Auge{
    -icono: String
    +obtenerLeyenda(Cancion cancion): String
    +cambiarPopularidad(Cancion cancion, Popularidad popularidad): void
    +actualizarPopularidad(Cancion cancion): void
}

Cancion o--> Album
Album o--> Artista
Cancion *- Popularidad

Normal ..> Auge
Auge ..> Normal
Auge ..> Tendencia
Tendencia ..> Normal

Popularidad <|.. Tendencia
Popularidad <|.. Auge
Popularidad <|.. Normal
@enduml